--- a/resources/language/German/strings.xml
+++ b/resources/language/German/strings.xml
@@ -105,4 +105,16 @@
 	<string id="30102">Als 'gesehen' markieren</string>
 	<string id="30103">Sektionsbibliothek aktualisieren</string>
 	<string id="30104">Liste aktualisieren</string>
+
+    <string id="30135">Fehler</string>
+    <string id="30150">Skin unterstützt das Setzen von Views nicht</string>
+
+
+	<!-- Default views -->
+    <string id="30300">Aktiviert</string>              
+    <string id="30301">Zurücksetzen</string>              
+    <string id="30302">Filme</string>              
+    <string id="30305">Serien</string>              
+    <string id="30306">Staffeln</string>              
+    <string id="30307">Episoden</string>              
 </strings>
